<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jay.myapplication.MainActivity"
    tools:showIn="navigation_view"
    >
    <group
        android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:orderInCategory="98"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24"/>

    <item
        android:title="@string/level"
        android:orderInCategory="99">
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/action_100level"
                    android:orderInCategory="100"
                    android:title="@string/_100_level"
                    android:icon="@drawable/baseline_school_24"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_200level"
                    android:orderInCategory="200"
                    android:title="@string/_200_level"
                    android:icon="@drawable/baseline_school_24"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/action_300level"
                    android:orderInCategory="300"
                    android:title="@string/_300_level"
                    android:icon="@drawable/baseline_school_24"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/action_400level"
                    android:orderInCategory="400"
                    android:title="@string/_400_level"
                    android:icon="@drawable/baseline_school_24"
                    app:showAsAction="never"/>
                <item
                    android:id="@+id/action_500level"
                    android:orderInCategory="500"
                    android:title="@string/_500_level"
                    android:icon="@drawable/baseline_school_24"
                    app:showAsAction="never"/>
            </group>
        </menu>
    </item>

    <item
        android:title="@string/info"
        android:orderInCategory="600">

        <menu>
            <group
                android:checkableBehavior="single"
                >
            <item
                android:id="@+id/action_contact"
                android:title="@string/contact_us"
                android:icon="@drawable/baseline_support_agent_24">
            </item>
            </group>
        </menu>

    </item>
    </group>
</menu>